created darkmode state and method

--- a/src/App.css
+++ b/src/App.css
@@ -1,43 +1,54 @@
-.app{
-  height: 100vh;
+/* .app{
+  height: 100vh; */
   /* background: rgb(118, 230, 221); */
-  background: linear-gradient(35deg,#CCFFFF, #FFCCCC);
+  /* background: linear-gradient(35deg,#CCFFFF, #FFCCCC); */
   /* background: linear-gradient(black, #000099, #66c2ff, #ffcccc, #ffeee6); */
-}
+/* } */
 
-div {
+
+
+.box {
   border-radius: 5px;
+  /* height: 100vh; */
+  /* position: absolute; */
+  /* width: 30vh; */
 
 }
-div:hover {
+/* .box:hover {
   animation-name: background-color;
   animation-duration: 500ms;
   animation-fill-mode: forwards;
 
-}
-@keyframes background-color {
+}  */
+/* @keyframes background-color {
   100% {
-    background-color: #e0f3eb;
+    background-color: #4b5c55;
   }
-}
+}  */
 
-.box{
+.box{ 
   height: 100px;
-  background: white;
+  padding: 50px;
+  /* background: rgb(138, 132, 132); */
   border: 2px solid black;
   border-radius: 10px;
-  margin: auto;  
-  /* flex-basis: 500px; */
-  display: flex;
-  flex: 1 0 300px;
+  /* line-height: 1.8; */
   
-  /* flex-wrap: wrap; */
-  flex-direction: column;
+  margin: auto;   
+  
+
+  /* flex-basis: 500px;  */
+  /* display: flex; */
+  width: 50%;
+  /* flex: 0 0 100px;  */
+  
+  /* flex-wrap: wrap;  */
+  /* flex-direction: column;
   justify-content: space-around;
-  align-items: center;
+  align-items: center;  */
   /* background-color: rgba(45, 45, 45, 0.1); */
-  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-}
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23); 
+ } 
 
 input:hover {
   transform: scale(1.1);
