Update conversion component css

--- a/src/App.css
+++ b/src/App.css
@@ -1,51 +1,21 @@
-/* .app{
-  height: 100vh; */
-  /* background: rgb(118, 230, 221); */
-  /* background: linear-gradient(35deg,#CCFFFF, #FFCCCC); */
-  /* background: linear-gradient(black, #000099, #66c2ff, #ffcccc, #ffeee6); */
-/* } */
 
-
-
-.box {
+.box { 
+  
   border-radius: 5px;
-  /* height: 100vh; */
-  /* position: absolute; */
-  /* width: 30vh; */
-
-}
-/* .box:hover {
-  animation-name: background-color;
-  animation-duration: 500ms;
-  animation-fill-mode: forwards;
-
-}  */
-/* @keyframes background-color {
-  100% {
-    background-color: #4b5c55;
-  }
-}  */
-
-.box{ 
+  position: relative;
   height: 100px;
   padding: 50px;
-  /* background: rgb(138, 132, 132); */
-  border: 2px solid black;
+  background: rgb(182, 156, 156);
+  border: 1.5px solid black;
   border-radius: 10px;
-  /* line-height: 1.8; */
-  
-  margin: auto;   
-  
-
+  margin: auto;  
+  margin-top: 5%;
   /* flex-basis: 500px;  */
   /* display: flex; */
-  width: 50%;
+  width: 40vh;
   /* flex: 0 0 100px;  */
-  
-  /* flex-wrap: wrap;  */
-  /* flex-direction: column;
-  justify-content: space-around;
-  align-items: center;  */
+  /* justify-content: space-around; */
+  align-items: center;  
   /* background-color: rgba(45, 45, 45, 0.1); */
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23); 
  } 
@@ -55,3 +25,21 @@ input:hover {
 }
 
 
+h3 {  
+  text-align: left;
+  margin-left: 5%;
+}
+
+.button {
+  position: absolute;
+  right: 10%;
+  margin-top:0;
+  
+}
+
+
+h1 {
+  margin-top: 0px;
+  text-decoration: underline ;
+  
+}
