--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,23 @@
-body{
+body, html {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: Tahoma;
-  /* display: flex; */
-  /* flex: 1 0 500px;  */
-  margin: auto;   
-  /* flex-basis: 500px; */
-  /* flex-wrap: wrap;  */
-  /* justify-content: space-around; */
-  /* align-items: stretch;  */
-} 
+  width: 100%;
+  height: 100%;
+  
+}
+
+#root {
+  height: 100%;
+  width: 100%;
+
+}
 
 .light-mode {
   background-color: #fff;
-  color: #444444;
-  height: 100vh;
+  color: #262525;
+  height: 100%;
   /* background: rgb(118, 230, 221); */
   background: linear-gradient(35deg,#CCFFFF, #FFCCCC);
   /* background: linear-gradient(black, #000099, #66c2ff, #ffcccc, #ffeee6); */
@@ -25,12 +27,8 @@ body{
 .dark-mode {
   /* background: #2e2e2e; */
   color: #f9f5f5;
-  height: 100vh;
+  height: 100%;
   background: linear-gradient(35deg,rgb(39, 40, 40), rgba(53, 52, 52, 0.9));
  
-
 }
 
-h3 {
-  text-align: center
-}
