--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 
 .box { 
   
-  border-radius: 5px;
   position: relative;
   height: 100px;
   padding: 50px;
@@ -25,6 +24,7 @@ input:hover {
 }
 
 
+
 h3 {  
   text-align: left;
   margin-left: 5%;
@@ -37,9 +37,10 @@ h3 {
   
 }
 
-
 h1 {
-  margin-top: 0px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: auto;
   text-decoration: underline ;
   
 }
