--- a/src/App.css
+++ b/src/App.css
@@ -1,29 +1,20 @@
 
 .box { 
-  
   position: relative;
   height: 100px;
   padding: 50px;
-  background: rgb(182, 156, 156);
   border: 1.5px solid black;
   border-radius: 10px;
   margin: auto;  
   margin-top: 5%;
-  /* flex-basis: 500px;  */
-  /* display: flex; */
   width: 40vh;
-  /* flex: 0 0 100px;  */
-  /* justify-content: space-around; */
   align-items: center;  
-  /* background-color: rgba(45, 45, 45, 0.1); */
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23); 
  } 
 
 input:hover {
   transform: scale(1.1);
 }
-
-
 
 h3 {  
   text-align: left;
@@ -34,6 +25,7 @@ h3 {
   position: absolute;
   right: 10%;
   margin-top:0;
+  font-family: Courier ;
   
 }
 
