--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ body, html {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Tahoma;
+  font-family: Verdana;
   width: 100%;
   height: 100%;
   
@@ -18,17 +18,14 @@ body, html {
   background-color: #fff;
   color: #262525;
   height: 100%;
-  /* background: rgb(118, 230, 221); */
   background: linear-gradient(35deg,#CCFFFF, #FFCCCC);
-  /* background: linear-gradient(black, #000099, #66c2ff, #ffcccc, #ffeee6); */
   
 }
 
 .dark-mode {
-  /* background: #2e2e2e; */
   color: #f9f5f5;
   height: 100%;
-  background: linear-gradient(35deg,rgb(39, 40, 40), rgba(53, 52, 52, 0.9));
+  background: linear-gradient(35deg,rgb(46, 52, 52), rgba(28, 25, 25, 0.9));
  
 }
 
